Wed Jul 21 15:43:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
          Fixed a valgrind complain about uninitialized value.

Wed Jul 21 15:02:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_array.cpp:

          Cosmetic changes.

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/utl_err.h:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/util/utl_err.cpp:
        * TAO_IDL/util/utl_global.cpp:

          An error is now output when an anonymous
          type is seen. For legacy IDL files, a
          command line option -aw has been added,
          which will cause a warning to be output
          instead.

        * docs/compiler.html:

          Updated documentation with the new option above.

Wed Jul 21 09:57:34 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/ORB_Core_TSS_Resources.cpp:
        * tao/ORB_Core.cpp:
        * tao/ORB_Core.inl:
        * tao/ORB_Core_TSS_Resources.h:
        * tao/ORB_Core.h:
          Fixed bug 2533. Now ORB_Core's TSS resources are cleaned during
          orb destroy.

        * tests/Portable_Interceptors/Slot/driver.cpp:
          Explicitely destroy orb since doing this implicitely when main()
          returns is too late.

Wed Jul 21 03:09:21 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:

          Fix for premature committal error.

Wed Jul 21 02:34:25 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:

          Use the modified open method in the ACE_Service_Gestalt to get
          the behavior that has been assumed since the introduction of
          multiple service contexts.

Tue Jul 20 12:28:24 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_attribute/attribute.cpp:
